--- a/style.css
+++ b/style.css
@@ -136,6 +136,30 @@ main {
   text-shadow: 1px 1px #133;
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  pointer-events: none;
+  opacity: 0;
+  text-align: center;
+  transition: all 0.3s;
+}
+.contact .contact-section {
+  display: flex;
+}
+.contact i {
+  font-size: 4rem;
+}
+.contact p {
+  width: 8rem;
+}
+
 @media screen and (max-width: 500px) {
   .tech-padding {
     display: none;
