--- a/style.scss
+++ b/style.scss
@@ -142,6 +142,33 @@ main {
   }
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  pointer-events: none;
+  opacity: 0;
+  text-align: center;
+  transition: all 0.3s;
+
+  .contact-section {
+    display: flex;
+  }
+
+  i {
+    font-size: 4rem;
+  }
+
+  p {
+    width: 8rem;
+  }
+}
+
 // .highlight {
 //   line-height: 1.8rem;
 //   position: absolute;
