working contact section and changes to section switching method

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   font-family: "Cutive Mono", monospace;
 }
 
+a {
+  text-decoration: none;
+  color: papayawhip;
+}
+
 .monogram {
   width: 60px;
   height: 60px;
@@ -82,10 +87,10 @@ body {
 }
 
 .container {
-  height: calc(100vh - 200px - 6rem);
+  height: calc(100vh - 150px - 6rem);
   overflow: scroll;
   position: relative;
-  top: -30px;
+  top: -50px;
   pointer-events: none;
 }
 
@@ -104,7 +109,7 @@ main {
   font-size: 4rem;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.3s ease-out;
+  transition: all 0.25s;
 }
 .tech > * {
   margin: 16px;
@@ -124,7 +129,7 @@ main {
   height: 0;
   overflow: hidden;
   opacity: 0;
-  transition: opacity 0.3s;
+  transition: opacity 0.25s;
   z-index: 2;
   pointer-events: none;
   font-size: 0.95rem;
@@ -145,19 +150,38 @@ main {
   width: 100%;
   height: 0;
   overflow: hidden;
+  padding-left: 20px;
   pointer-events: none;
   opacity: 0;
   text-align: center;
-  transition: all 0.3s;
+  transition: all 0.25s;
 }
 .contact .contact-section {
   display: flex;
+  align-items: center;
+  margin: 20px;
+  opacity: 0;
+  transition: all 0.5s;
 }
 .contact i {
   font-size: 4rem;
 }
 .contact p {
   width: 8rem;
+  color: papayawhip;
+}
+.contact img {
+  width: 3.5rem;
+}
+.contact .link-indicator {
+  position: relative;
+  opacity: 0;
+  margin-top: 2px;
+  width: 10px;
+  height: 10px;
+  background-color: lightpink;
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  animation: indicator 2s infinite;
 }
 
 @media screen and (max-width: 500px) {
@@ -187,6 +211,14 @@ main {
   }
   100% {
     transform: translate();
+  }
+}
+@keyframes indicator {
+  0%, 10%, 30%, 100% {
+    left: 0;
+  }
+  20% {
+    left: 5px;
   }
 }
 
