--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,6 +13,14 @@ a {
   color: papayawhip;
 }
 
+p {
+  color: papayawhip;
+  &::selection {
+    background-color: plum;
+    text-shadow: 1px 1px #444;
+  }
+}
+
 .monogram {
   width: 60px;
   height: 60px;
@@ -59,6 +67,12 @@ a {
     display: inline-block;
     cursor: pointer;
     transition: all 0.1s;
+    
+
+    &::selection {
+      background-color: plum;
+      text-shadow: 1px 1px #444;
+    }
   }
 }
 
@@ -153,20 +167,21 @@ main {
 .contact {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 0;
   width: 100%;
   height: 0;
   overflow: hidden;
-  padding-left: 20px;
   pointer-events: none;
   opacity: 0;
   text-align: center;
   transition: all 0.25s;
+  margin-left: 20px;
 
   .contact-section {
     display: flex;
+    justify-content: center;
     align-items: center;
     margin: 20px;
     opacity: 0;
@@ -178,8 +193,8 @@ main {
   }
 
   p {
-    
-    width: 8rem;
+    width: 10rem;
+    margin-bottom: 0;
     color: papayawhip;
   }
 
@@ -189,6 +204,7 @@ main {
 
   .link-indicator {
     position: relative;
+    top: 7px;
     opacity: 0;
     margin-top: 2px;
     width: 10px;
@@ -196,6 +212,19 @@ main {
     background-color: lightpink;
     clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
     animation: indicator 2s infinite;
+  }
+
+  // .email {
+  //   position: relative;
+  //   // left: -70px;
+  //   // top: 5px;
+  //   top: -20px;
+  //   left: -50px;
+  // }
+
+  .plane-icon {
+    position: relative;
+    left: -5px;
   }
 }
 
@@ -253,8 +282,8 @@ main {
 .next-project {
   opacity: 0;
   position: absolute;
-  top: 110px;
-  left: 8px;
+  top: 90px;
+  left: -15px;
   height: 30px;
   width: 10px;
   clip-path: polygon(100% 0%, 100% 100%, 0% 50%);
@@ -271,7 +300,7 @@ main {
 }
 .next-project {
   left: unset;
-  right: 7px;
+  right: -15px;
   clip-path: polygon(0% 0%, 0% 100%, 100% 50%);
 }
 
@@ -314,7 +343,7 @@ main {
 
 @keyframes indicator {
   0%, 10%, 30%, 100% {
-    left: 0;
+    left: 0px;
   }
   20% {
     left: 5px;
