--- a/styles/style.scss
+++ b/styles/style.scss
@@ -158,10 +158,17 @@ main {
   // text-shadow: 1px 1px #133;
   line-height: 1.8rem;
 
-  &::selection {
-    background-color: plum;
-    text-shadow: 1px 1px #133;
+  img {
+    width: 120px;
+    border-radius: 5px;
+    float: right;
+    margin-top: 25px;
+    margin-left: 20px;
+    margin-right: 5px;
+    margin-bottom: 5px;
   }
+
+
 }
 
 .contact {
@@ -193,8 +200,8 @@ main {
   }
 
   p {
-    width: 10rem;
-    margin-bottom: 0;
+    width: 12rem;
+    line-height: 1.5rem;
     color: papayawhip;
   }
 
@@ -204,7 +211,7 @@ main {
 
   .link-indicator {
     position: relative;
-    top: 7px;
+    top: -1px;
     opacity: 0;
     margin-top: 2px;
     width: 10px;
@@ -276,6 +283,19 @@ main {
   > * {
     margin: 10px;
   }
+
+}
+
+.project-links {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin: 1rem 0 1.5rem;
+
+  > * {
+    width: 12rem;
+    text-align: center;  
+  }
 }
 
 .prev-project,
@@ -343,10 +363,10 @@ main {
 
 @keyframes indicator {
   0%, 10%, 30%, 100% {
-    left: 0px;
+    left: -10px;
   }
   20% {
-    left: 5px;
+    left: -5px;
   }
 }
 
