changed the typeface

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Frank+Ruhl+Libre&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Anonymous+Pro&family=Frank+Ruhl+Libre&family=Open+Sans&display=swap");
 body {
   background-color: #444;
+  font-family: "Open Sans", sans-serif;
   font-family: "Cutive Mono", monospace;
+  font-family: "Anonymous Pro", monospace;
   max-height: 100vh;
   overflow: hidden;
   margin-bottom: 0;
@@ -110,7 +112,7 @@ p::selection {
 
 main {
   position: relative;
-  max-width: 550px;
+  max-width: 600px;
   margin: auto;
 }
 
@@ -139,7 +141,7 @@ main {
 .about {
   color: papayawhip;
   position: absolute;
-  margin-bottom: 100px;
+  margin-bottom: 0px;
   height: 0;
   overflow: hidden;
   opacity: 0;
@@ -224,9 +226,11 @@ main {
   transition: all 1s;
 }
 .projects p {
-  text-align: justify;
+  text-align: center;
   color: papayawhip;
   line-height: 1.8rem;
+  position: relative;
+  top: -8px;
 }
 
 .project-show {
@@ -264,8 +268,16 @@ main {
   margin: 1rem 0 1.5rem;
 }
 .project-links > * {
-  width: 12rem;
+  width: 4rem;
   text-align: center;
+}
+.project-links img {
+  width: 3rem;
+}
+.project-links i {
+  font-size: 2.6rem;
+  position: relative;
+  top: 4px;
 }
 
 .prev-project,
