--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Anonymous+Pro&family=Frank+Ruhl+Libre&family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&family=Montserrat:wght@300&display=swap");
 body {
   background-color: #444;
-  font-family: "Open Sans", sans-serif;
-  font-family: "Cutive Mono", monospace;
-  font-family: "Anonymous Pro", monospace;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
   max-height: 100vh;
   overflow: hidden;
   margin-bottom: 0;
@@ -11,11 +10,11 @@ body {
 
 a {
   text-decoration: none;
-  color: papayawhip;
 }
 
 p {
   color: papayawhip;
+  text-shadow: 1px 1px #333;
 }
 p::selection {
   background-color: plum;
@@ -23,31 +22,37 @@ p::selection {
 }
 
 .monogram {
+  position: relative;
+  top: 0;
   width: 60px;
   height: 60px;
-  background-color: #fff1e1;
-  border-radius: 5px;
   margin: 70px auto 50px;
-  font-family: "Frank Ruhl Libre", serif;
+  background-color: #fff1e1;
+  border-radius: 4px;
   box-shadow: 0 0 500px 50px white;
-  cursor: pointer;
+  color: #666;
+  font-family: "Frank Ruhl Libre", serif;
   line-height: 60px;
   text-align: center;
-  color: #666;
+  cursor: pointer;
+  transition: all 0.75s;
 }
 .monogram h1 {
   font-size: 3rem;
 }
+.monogram h1::selection {
+  background-color: none;
+}
 
 .title {
   opacity: 1;
-  transition: all 0.4s;
+  transition: all 0.65s;
 }
 .title p {
   margin: 0;
   color: papayawhip;
   text-align: center;
-  line-height: 1.5rem;
+  line-height: 2rem;
 }
 
 .navigation {
@@ -55,32 +60,19 @@ p::selection {
   top: 30px;
   display: flex;
   justify-content: center;
-  transition: all 1s;
+  z-index: 10;
+  transition: all 1s ease-in-out;
 }
 .navigation span {
-  width: 150px;
+  width: 10rem;
   text-align: center;
 }
 .navigation p {
-  display: inline-block;
   cursor: pointer;
-  transition: all 0.1s;
-}
-.navigation p::selection {
-  background-color: plum;
-  text-shadow: 1px 1px #444;
-}
-
-.bounce {
-  animation: bounce 0.2s;
-}
-
-.current-section {
-  background: linear-gradient(to bottom, transparent 80%, white 80%, white 99%, transparent 99%);
 }
 
 .navigation span p:hover {
-  color: papayawhip;
+  color: #fff1e1;
 }
 
 .navigation :nth-child(1) p {
@@ -100,11 +92,11 @@ p::selection {
 }
 
 .container {
-  height: calc(100vh - 160px - 6rem);
+  height: calc(100vh - 130px - 6rem);
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
-  top: -50px;
+  top: -90px;
   pointer-events: none;
   padding: 0 15px;
   scroll-behavior: smooth;
@@ -117,48 +109,50 @@ main {
 }
 
 .tech {
+  position: relative;
+  top: 15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   max-width: 500px;
-  margin: 15px auto;
+  margin: 0 auto;
   font-size: 4rem;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.25s;
+  transition: all 0.25s ease-in;
 }
 .tech > * {
   margin: 16px;
   opacity: 0;
   transition: all 1s ease-in;
-  transform: translate(0, 0);
-  perspective: 100px;
 }
 .tech .tech-padding {
   width: 16px;
 }
 
 .about {
-  color: papayawhip;
-  position: absolute;
   margin-bottom: 0px;
   height: 0;
   overflow: hidden;
   opacity: 0;
-  transition: opacity 0.25s;
+  transition: opacity 0.25s ease-in;
   z-index: 2;
   pointer-events: none;
-  font-size: 1rem;
+  color: papayawhip;
   text-align: justify;
   line-height: 1.8rem;
 }
+.about p {
+  text-indent: 20px;
+  margin: 10px;
+}
 .about img {
-  width: 120px;
-  border-radius: 5px;
+  width: 130px;
+  border-radius: 4px;
   float: right;
-  margin-top: 25px;
-  margin-left: 20px;
-  margin-right: 5px;
+  margin-top: 17px;
+  margin-left: 25px;
+  margin-right: 10px;
   margin-bottom: 5px;
 }
 
@@ -166,16 +160,14 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: absolute;
-  top: 0;
   width: 100%;
   height: 0;
   overflow: hidden;
   pointer-events: none;
   opacity: 0;
   text-align: center;
-  transition: all 0.25s;
-  margin-left: 20px;
+  transition: all 0.25s ease-in;
+  margin-left: 40px;
 }
 .contact .contact-section {
   display: flex;
@@ -190,63 +182,50 @@ main {
 }
 .contact p {
   width: 12rem;
-  line-height: 1.5rem;
-  color: papayawhip;
 }
 .contact img {
   width: 3.5rem;
+  padding: 0.25rem;
 }
 .contact .link-indicator {
   position: relative;
-  top: -1px;
-  opacity: 0;
-  margin-top: 2px;
+  top: 1px;
   width: 10px;
   height: 10px;
+  opacity: 0;
   background-color: lightpink;
   clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
   animation: indicator 2s infinite;
 }
-.contact .plane-icon {
-  position: relative;
-  left: -5px;
-}
 
 .projects {
-  position: absolute;
-  top: 0;
+  position: relative;
   height: 0;
   overflow: hidden;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.25s;
+  transition: all 0.25s ease-in;
 }
 .projects img {
   width: 100%;
   transition: all 1s;
 }
 .projects p {
-  text-align: center;
-  color: papayawhip;
-  line-height: 1.8rem;
   position: relative;
   top: -8px;
+  text-align: center;
+  line-height: 1.8rem;
 }
 
 .project-show {
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: all 1s;
 }
 
 .extra-project {
   position: absolute;
   top: 0;
-}
-
-.project-tech-header {
-  display: block;
-  text-align: center;
 }
 
 .project-tech {
@@ -265,7 +244,7 @@ main {
   display: flex;
   width: 100%;
   justify-content: center;
-  margin: 1rem 0 1.5rem;
+  margin: 1rem 0;
 }
 .project-links > * {
   width: 4rem;
@@ -291,7 +270,7 @@ main {
   clip-path: polygon(100% 0%, 100% 100%, 0% 50%);
   border: none;
   background-color: papayawhip;
-  transition: all 0.2s;
+  transition: all 0.5s;
 }
 .prev-project:focus,
 .next-project:focus {
@@ -308,6 +287,10 @@ main {
   clip-path: polygon(0% 0%, 0% 100%, 100% 50%);
 }
 
+.plane-icon::selection {
+  background-color: none;
+}
+
 ::-webkit-scrollbar {
   width: 5px;
   height: 10px;
@@ -317,7 +300,7 @@ main {
   background-color: #666;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 530px) {
   .tech-padding {
     display: none;
   }
@@ -344,14 +327,6 @@ main {
   }
   20% {
     left: -5px;
-  }
-}
-@keyframes flip {
-  0% {
-    transform: rotateY(0);
-  }
-  100% {
-    transform: rotateY(180deg);
   }
 }
 @keyframes bounce {
