--- a/styles/style.scss
+++ b/styles/style.scss
@@ -36,7 +36,7 @@ p {
   line-height: 60px;
   text-align: center;
   cursor: pointer;
-  transition: all 0.75s;
+  transition: top 0.75s;
   
   h1 {
     font-size: 3rem;
