--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&display=swap');
 
 body {
   background-color: #444;
@@ -30,16 +31,18 @@ p {
   margin: 70px auto 50px;
   background-color: rgb(255, 241, 225);
   border-radius: 4px;
-  box-shadow: 0 0 500px 50px white;
+  box-shadow: 0 0 500px 50px #efefef;
   color: #666;
-  font-family: 'Frank Ruhl Libre', serif;
-  line-height: 60px;
-  text-align: center;
   cursor: pointer;
   transition: top 0.75s;
+  transition: box-shadow 0.1  s;
   
   h1 {
+    font-family: 'Cormorant', serif;
+    font-weight: 500;
     font-size: 3rem;
+    line-height: 60px;
+    text-align: center;
 
     &::selection {
       background-color: none;
