--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,11 @@ p::selection {
   scroll-behavior: smooth;
 }
 
+.fade-scroll {
+  -webkit-mask-image: linear-gradient(transparent, black 10px), linear-gradient(-90deg, black 400px, transparent 400px);
+  mask-image: linear-gradient(transparent, black 10px), linear-gradient(-90deg, black 400px, transparent 400px);
+}
+
 main {
   position: relative;
   max-width: 600px;
@@ -134,6 +139,7 @@ main {
 }
 
 .about {
+  position: relative;
   margin-bottom: 0px;
   height: 0;
   overflow: hidden;
