--- a/styles/style.scss
+++ b/styles/style.scss
@@ -72,6 +72,7 @@ p {
   
   span {
     width: 10rem;
+    margin: 0;
     text-align: center;
   }
   
@@ -107,14 +108,14 @@ p {
   scroll-behavior: smooth;
 }
 
-.fade-scroll {
-  -webkit-mask-image: 
-    linear-gradient(transparent, black 10px),
-    linear-gradient(-90deg, black 400px, transparent 400px);
-  mask-image: 
-    linear-gradient(transparent, black 10px),
-    linear-gradient(-90deg, black 400px, transparent 400px);
-}
+// .fade-scroll {
+//   -webkit-mask-image: 
+//     linear-gradient(transparent, black 10px),
+//     linear-gradient(-90deg, black 400px, transparent 400px);
+//   mask-image: 
+//     linear-gradient(transparent, black 10px),
+//     linear-gradient(-90deg, black 400px, transparent 400px);
+// }
 
 main {
   position: relative;
@@ -335,6 +336,16 @@ main {
 @media screen and (max-width: 530px) {
   .tech-padding {
     display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navigation {
+    flex-wrap: wrap;
+    span {
+      width: fit-content;
+      margin: auto 7px;
+    }
   }
 }
 
