testing new glow colour

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -31,7 +31,8 @@ p {
   margin: 70px auto 50px;
   background-color: rgb(255, 241, 225);
   border-radius: 4px;
-  box-shadow: 0 0 500px 50px #efefef;
+  // box-shadow: 0 0 500px 50px #efefef;
+  box-shadow: 0 0 500px 50px #aaa;
   color: #666;
   cursor: pointer;
   transition: top 0.75s;
