--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,7 +32,7 @@ p {
   background-color: rgb(255, 241, 225);
   border-radius: 4px;
   // box-shadow: 0 0 500px 50px #efefef;
-  box-shadow: 0 0 500px 50px #aaa;
+  box-shadow: 0 0 500px 50px #888;
   color: #666;
   cursor: pointer;
   transition: top 0.75s;
