--- a/styles/style.scss
+++ b/styles/style.scss
@@ -300,26 +300,36 @@ main {
 .next-project {
   opacity: 0;
   position: absolute;
-  top: 90px;
-  left: -15px;
-  height: 30px;
-  width: 10px;
-  clip-path: polygon(100% 0%, 100% 100%, 0% 50%);
+  top: 264px;
+  left: 5px;
+  height: 50px;
+  width: 50px;
   border: none;
-  background-color: papayawhip;
-  transition: all 0.5s;
+  background-color: transparent;
+  
+  div {
+    height: 30px;
+    width: 12px;
+    background-color: papayawhip;
+    clip-path: polygon(100% 0%, 100% 100%, 0% 50%);
+    transition: all 0.5s;
+    margin: auto;
+  }
 
   &:focus {
     outline: none;
   }
-  &:hover {
+  &:hover div {
     background-color: plum;
   }
 }
 .next-project {
   left: unset;
-  right: -15px;
-  clip-path: polygon(0% 0%, 0% 100%, 100% 50%);
+  right: 5px;
+
+  div {
+    clip-path: polygon(0% 0%, 0% 100%, 100% 50%);
+  }
 }
 
 .plane-icon {
