--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,12 @@ main {
 .tech .tech-padding {
   width: 16px;
 }
+.tech .tech-icon p {
+  width: 100%;
+  text-align: center;
+  font-size: 0.8rem;
+  margin: 0;
+}
 
 .about {
   position: relative;
