--- a/styles/style.scss
+++ b/styles/style.scss
@@ -146,6 +146,13 @@ main {
   .tech-padding {
     width: 16px;
   }
+
+  .tech-icon p {
+    width: 100%;
+    text-align: center;
+    font-size: 0.8rem;
+    margin: 0;
+  }
 }
 
 .about {
